// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: no-parent.txt 1`] = `
"/no-parent.txt: ../src/macro: Invalid usage of JsxOnDemandChildren.
  4 | import JsxOnDemandChildren from '../src/macro';
  5 |
> 6 | JsxOnDemandChildren;
    | ^^^^^^^^^^^^^^^^^^^
  7 |
  8 | function Test() {
  9 |   return ("
`;

exports[`matches expected output: not-JSXElement.txt 1`] = `
"/not-JSXElement.txt: ../src/macro: Invalid usage of JsxOnDemandChildren.
  4 | import JsxOnDemandChildren from '../src/macro';
  5 |
> 6 | JsxOnDemandChildren.invalid = true;
    | ^^^^^^^^^^^^^^^^^^^
  7 |
  8 | function Test() {
  9 |   return ("
`;

exports[`matches expected output: simple.txt 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
'use strict';

import React from 'react';
import JsxOnDemandChildren from '../src/macro';

function Test() {
  return (
    <Parent>
      <JsxOnDemandChildren>
        <Parent.LeafChild prop={true} />
      </JsxOnDemandChildren>
    </Parent>
  );
};
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
'use strict';

import React from 'react';

function Test() {
  return <Parent LeafChild={() => <Parent.LeafChild prop={true} />}></Parent>;
}

`;
